hphp/hack/test/typecheck/idx3_2.php.exp
File "idx3_2.php", line 10, characters 10-11:
Invalid return type (Typing[4110])
File "idx3_2.php", line 7, characters 15-20:
This is a string
File "idx3_2.php", line 9, characters 21-21:
It is incompatible with an int
